--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,8 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0"
+
+[dev-dependencies]
 rstest = "0.10"
+quickcheck = "1.0"
+quickcheck_macros = "1.0"
