--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,11 @@ harness = false
 [lib]
 bench = false
 
+[features]
+# BigDecimal conversion
+big_decimal = []
+
 [dependencies]
-anyhow = "1.0"
-bigdecimal = "0.2"
 
 [dev-dependencies]
 rstest = "0.10"
@@ -22,3 +24,4 @@ quickcheck_macros = "1.0"
 num-bigint = "0.3"
 lazy_static = "1.4"
 criterion = { version = "0.3", features = ["html_reports"]}
+bigdecimal = "0.2"
